[fix] deleted unused import, fix sonarlint